[metadata]
name= pydracodec
url= https://ousttrue.github.io/pydracodec/
description= draco decoder
long_description= file: README.md
long_description_content_type= text/markdown
author= ousttrue
author_email= ousttrue@gmail.com
license= Apache License 2.0
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Topic :: Multimedia :: Graphics :: 3D Modeling
keywords= gltf
include_package_data = True

[options]
packages=find:
package_dir=
    =src
install_requires =
